fixed scrollbar shifting content when searching

--- a/client/src/assets/base.css
+++ b/client/src/assets/base.css
@@ -65,9 +65,8 @@
 
 html {
   width: 100vw;
-}
-body {
   overflow-x: hidden;
+  overflow-y:scroll;
 }
 
 body {
